# digital_casting_app

./: .clangd  .gitignore  .gitmodules  3  CMakeLists.txt  README.md  imgui.ini  init-setup-osx.sh  init-setup-win.bat  package-install.bat  package-install.sh  vcpkg.json
.github/workflows/: cmak-platfom-windows.yml
include/: MainWindow.h  app.h  main_window.h
src/: main.cpp  main_back.cpp  main_bakup.cpp
src/app/: app.cpp
src/gui/: MainWindows.cpp  main_windows.cpp
tests/boost/: CMakeLists.txt  hello_world.cpp
